--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,4 +54,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.1.0')
     implementation 'com.google.firebase:firebase-analytics'
 
+    //sentry
+    implementation 'io.sentry:sentry-android:5.6.1'
+
 }
